--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@storybook/react-vite": "^8.4.5",
     "@storybook/test": "^8.4.5",
     "@types/canvas-confetti": "^1.9.0",
+    "@types/node": "^22.10.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^8.16.0",
