--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "globals": "^15.12.0",
     "jsdom": "^25.0.1",
     "prettier": "^3.4.1",
+    "redux-mock-store": "^1.5.5",
     "storybook": "^8.4.5",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.16.0",
